[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storm250"
version = "0.1.0"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
# decorator for differentiating between unit tests and network tests
markers = [
    "network: tests that require network access"
]
# disable playwright plugin which is auto-loaded by pytest (needed for tests to work on local computer)
addopts = "-p no:playwright"
